--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slider": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -21,6 +23,7 @@
     "next-themes": "^0.4.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-loader-spinner": "^6.1.6",
     "react-webcam": "^7.2.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.6.0",
